@@ -1,6 +1,7 @@
 Revision history for Dist-Build
 
 {{$NEXT}}
+          - Add Dist::Build::XS::Alien
           - Fix various issues in dump functions.
 
 0.014     2024-09-13 11:25:35+02:00 Europe/Brussels
